--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -7,7 +7,6 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="24dp"
-    android:rotationX="0"
     android:id="@+id/main">
 
     <TextView
@@ -18,7 +17,8 @@
         android:text="Hello, User"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginStart="8dp"/>
+        android:textColor="#546E7A"
+        android:layout_marginStart="8dp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
         android:layout_marginBottom="24dp"
         android:gravity="center"
         android:text="Please select the category you want to explore:"
-        android:textColor="#FF5722"
+        android:textColor="#0D47A1"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -35,11 +35,9 @@
         android:id="@+id/card_general_news"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#21D0F3"
-        android:padding="24dp"
         android:layout_margin="20dp"
+        android:backgroundTint="#2196F3"
+        android:padding="24dp"
         app:cardCornerRadius="16dp">
 
         <TextView
@@ -48,49 +46,45 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="General News"
-            android:textSize="22sp" />
+            android:textSize="22sp"
+            android:textColor="#FFFFFF" />
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_sports_news"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#21D0F3"
+        android:layout_margin="20dp"
+        android:backgroundTint="#2196F3"
         android:padding="24dp"
-        app:cardCornerRadius="16dp"
-        android:layout_margin="20dp">
+        app:cardCornerRadius="16dp">
 
         <TextView
+            android:id="@+id/tv_sports"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="Sports News"
             android:textSize="22sp"
-            android:id="@+id/tv_sports"
-            />
+            android:textColor="#FFFFFF" />
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_technology_news"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#21D0F3"
-        android:padding="24dp"
-        app:cardCornerRadius="16dp"
         android:layout_margin="20dp"
-        >
+        android:backgroundTint="#2196F3"
+        android:padding="24dp"
+        app:cardCornerRadius="16dp">
 
         <TextView
+            android:id="@+id/tv_technology"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="Technology News"
             android:textSize="22sp"
-            android:id="@+id/tv_technology"
-            />
+            android:textColor="#FFFFFF" />
     </androidx.cardview.widget.CardView>
 </LinearLayout>
